# Strip-packing-problem

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
DRL/: DRL.md  random_rl_agent.py
python/: test_pack_api.py
python/spp/: __init__.py  __init__.pyi  _spp_native.cpp
src/: BLEU.cpp  BLEU.h  datareader.cpp  datareader.h  heuristic.cpp  heuristic.h  knapsack.h  main.cpp  master_milp.cpp  master_milp.h  skyline.cpp  spp.cpp  spp.h  util.cpp  util.h
test/: CMakeLists.txt  NCBP.lp  Rectangle.output  Solution.output  gtest_solver_utils_test.cpp
